fix: left align header logo with breadcrumbs and subnav

--- a/media/css/m24/components/navigation-refresh.scss
+++ b/media/css/m24/components/navigation-refresh.scss
@@ -93,7 +93,6 @@ $margin-top: 54px; // top margin offset for mobile navigation menu
         justify-content: space-between;
         position: static;
         padding: 0 $container-padding;
-        box-sizing: border-box;
     }
 }
 
